# rewACT

./: .gitignore  MANIFEST.in  QUICKSTART.md  README.md  demo_rewards.json  pyproject.toml  setup.py  train.py
.github/workflows/: build-pypi-packages.yml  publish-pypi.yml
lerobot_policy_actvantage/: LICENSE  README.md  pyproject.toml
lerobot_policy_actvantage/src/lerobot_policy_actvantage/: __init__.py  configuration_actvantage.py  modeling_actvantage.py  processor_actvantage.py
lerobot_policy_rewact/: README.md  pyproject.toml
lerobot_policy_rewact/src/lerobot_policy_rewact/: __init__.py  configuration_rewact.py  modeling_rewact.py  processor_rewact.py  utils.py
lerobot_policy_rewact/src/lerobot_policy_rewact/vision/: __init__.py  base.py  dinov3.py  resnet.py  vjepa2.py
rewact/: __init__.py  dataset_with_reward.py  py.typed  reward_plugin.py  utils.py  vision_encoders.py
rewact/actvantage_policy/: __init__.py  configuration_actvantage.py  modeling_actvantage.py
rewact/plugins/: __init__.py  control_mode_plugin.py  pistar_advantage_plugin.py  pistar_cumulative_reward_plugin.py  reward_plugin.py
rewact/policies/: factory.py
rewact/policies/actvantage/: __init__.py  configuration_actvantage.py  modeling_actvantage.py  processor_actvantage.py
rewact/policies/rewact/: __init__.py  configuration_rewact.py  modeling_rewact.py  processor_rewact.py
rewact/policy/: __init__.py  configuration_rewact.py  modeling_rewact.py
rewact/trainers/: __init__.py  actvantage_trainer.py  advantage_calculator.py  rewact_trainer.py
rewact/vision/: __init__.py  base.py  dinov3.py  resnet.py  vjepa2.py
rewact_modal_infra/: modal_pipeline.py  modal_test.py
rewact_modal_infra/trainers/: actvantage_trainer.py  advantage_calculator.py  rewact_trainer.py
rewact_tools/: README.md  pyproject.toml
rewact_tools/src/rewact_tools/: __init__.py  control_mode_plugin.py  dataset_with_reward.py  factory.py  labelled_reward_plugin.py  pistar_advantage_plugin.py  pistar_cumulative_reward_plugin.py  plugin_utils.py  reward_plugin.py  utils.py
scripts/: label_rewards.py  label_topreward.py  migrate_rewards_to_keypoints.py  modal_pipeline.py  pipeline_config_example.py  precompute_advantage.py  reward_wrapper.py  setup_modal.sh  smoke_test_vision_encoders.py  test_discord.py  train.py  train_actvantage.py  utils.py  visualise.py  visualise_advantages.py  visualise_cfg_delta.py  visualise_lowest_bin.py  visualise_reward_labels.py  visualise_reward_predictions.py
src/: lerobot_dataset.py  modeling_act.py  visualise.py
