[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rewact"
version = "0.1.2"
description = "RewACT: Reward-Augmented Action Chunking with Transformers"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Ville Kuosmanen"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "lerobot",
    "einops>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
    "mypy>=0.950",
]
scripts = [
    "wandb",
    "hydra-core>=1.2.0",
]
all = [
    "pytest>=7.0",
    "black>=22.0",
    "isort>=5.0", 
    "flake8>=4.0",
    "mypy>=0.950",
    "wandb",
    "hydra-core>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/villekuosmanen/rewACT"
Repository = "https://github.com/villekuosmanen/rewACT"
Documentation = "https://github.com/villekuosmanen/rewACT"
"Bug Tracker" = "https://github.com/villekuosmanen/rewACT/issues"

# Note: PyTorch dependencies are handled by lerobot to avoid index resolution issues
# If you need to install PyTorch manually, use:
# pip install torch torchvision --extra-index-url https://download.pytorch.org/whl/cu118

[tool.setuptools.packages.find]
where = ["."]
include = ["rewact*"]
exclude = ["tests*", "scripts*", "outputs*", "videos*"]

[tool.setuptools.package-data]
rewact = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
