[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_policy_rewact"
version = "0.1.1"
description = "RewACT: Reward-Augmented Action Chunking with Transformers - LeRobot Policy Plugin"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Ville Kuosmanen"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "lerobot>=0.4",
    "einops>=0.6.0",
    "torch",
    "torchvision",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100


