[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rewact_tools"
version = "0.1.2"
description = "RewACT Tools: Plugins and utilities for reward-based learning with LeRobot"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Ville Kuosmanen"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "lerobot>=0.4",
    "robocandywrapper",
    "numpy",
    "scipy>=1.7.0",
    "torch",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100



